5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1585_2905.log
== TEST (2019-03-21 22:01:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
l1 = float(input("valor de l1: "))
l2 = float(input("valor de l2: "))
l3 = float(input("valor de l3: "))
s = (l1 + l2 + l3)/2
area = (s*(s-l1)*(s-l2)*(s-l3))**(1/2)
print(area)

-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:01:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
l1 = float(input("valor de L1: "))
l2 = float(input("valor de L2: "))
l3 = float(input("valor de L3: "))
s = (l1 + l2 + l3)/2
area = (s*(s-l1)*(s-l2)*(s-l3))**(1/2)
print(area)

-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:02:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
l1 = float(input("valor de L1: "))
l2 = float(input("valor de L2: "))
l3 = float(input("valor de L3: "))
s = (l1 + l2 + l3)/2
area = sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area, 5)

-- ERROR:
File "XXXX", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:02:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
l1 = float(input("valor de L1: "))
l2 = float(input("valor de L2: "))
l3 = float(input("valor de L3: "))
s = (l1 + l2 + l3)/2
area = sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area, 5))

-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:03:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
l1 = float(input("valor de L1: "))
l2 = float(input("valor de L2: "))
l3 = float(input("valor de L3: "))
s = (l1 + l2 + l3)/2
area = sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area, 5))

-- EXECUTION TIME:
0.188786
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
